logs/tiddlywebplugins.kml.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/_trie'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/httpexceptor'...
Listing './lib/python3.5/site-packages/httpexceptor-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pykml'...
Compiling './lib/python3.5/site-packages/pykml/factory.py'...
***   File "./lib/python3.5/site-packages/pykml/factory.py", line 216
    print write_python_script_for_kml_document(doc)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pykml/schemas'...
Listing './lib/python3.5/site-packages/pykml/test'...
Compiling './lib/python3.5/site-packages/pykml/test/test_parser.py'...
***   File "./lib/python3.5/site-packages/pykml/test/test_parser.py", line 82
    print 'Unable to access the URL. Skipping test...'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pykml/test/testfiles'...
Listing './lib/python3.5/site-packages/pykml/test/testfiles/google_kml_developers_guide'...
Listing './lib/python3.5/site-packages/pykml/test/testfiles/google_kml_tutorial'...
Listing './lib/python3.5/site-packages/pykml-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/resolver-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/selector-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/tiddlyweb'...
Listing './lib/python3.5/site-packages/tiddlyweb/commands'...
Listing './lib/python3.5/site-packages/tiddlyweb/filters'...
Listing './lib/python3.5/site-packages/tiddlyweb/model'...
Listing './lib/python3.5/site-packages/tiddlyweb/serializations'...
Listing './lib/python3.5/site-packages/tiddlyweb/stores'...
Listing './lib/python3.5/site-packages/tiddlyweb/web'...
Listing './lib/python3.5/site-packages/tiddlyweb/web/challengers'...
Listing './lib/python3.5/site-packages/tiddlyweb/web/extractors'...
Listing './lib/python3.5/site-packages/tiddlyweb/web/handler'...
Listing './lib/python3.5/site-packages/tiddlyweb/wikitext'...
Listing './lib/python3.5/site-packages/tiddlyweb-2.4.2.egg-info'...
Listing './lib/python3.5/site-packages/tiddlywebplugins'...
Listing './lib/python3.5/site-packages/tiddlywebplugins.kml-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
